Changes to credit module
